# serializer version: 1
# name: test_select_states[platforms0][select.gotham_city_comfort_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'Smart control',
        'Economy',
        'Normal',
        'Luxury',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.gotham_city_comfort_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'comfort mode',
    'platform': 'myuplink',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'robin-r-1234-20240201-123456-aa-bb-cc-dd-ee-ff-47041',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_states[platforms0][select.gotham_city_comfort_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Gotham City comfort mode',
      'options': list([
        'Smart control',
        'Economy',
        'Normal',
        'Luxury',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.gotham_city_comfort_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Economy',
  })
# ---
# name: test_select_states[platforms0][select.gotham_city_comfort_mode_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'Smart control',
        'Economy',
        'Normal',
        'Luxury',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.gotham_city_comfort_mode_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'comfort mode',
    'platform': 'myuplink',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'batman-r-1234-20240201-123456-aa-bb-cc-dd-ee-ff-47041',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_states[platforms0][select.gotham_city_comfort_mode_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Gotham City comfort mode',
      'options': list([
        'Smart control',
        'Economy',
        'Normal',
        'Luxury',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.gotham_city_comfort_mode_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Economy',
  })
# ---
